// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrSheetEmployee Component displays the PrSheetEmployee, component: INFLUENCE_OF_LEADER_AND_ENVIRONMENT 1`] = `
<div>
  <WithStyles(List)
    className="PrSheetEmployee-nestedText-2"
    component="div"
    disablePadding={true}
  >
    <WithStyles(ListItem)>
      <WithStyles(Grid)
        container={true}
        direction="column"
      >
        <WithStyles(Grid)
          item={true}
          lg={12}
          md={12}
          sm={12}
          xl={12}
          xs={12}
        >
          <WithStyles(Typography)
            component="p"
          >
            Reflektion Beitrag des Vorgesetzten und Umfeld zur eigenen Entwicklung
          </WithStyles(Typography)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          lg={12}
          md={12}
          sm={12}
          xl={12}
          xs={12}
        >
          <WithStyles(Typography)
            className="PrSheetEmployee-comment-3"
            id="INFLUENCE_OF_LEADER_AND_ENVIRONMENT_Description"
            variant="body1"
          >
            Noch kein Eintrag
          </WithStyles(Typography)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(ListItem)>
  </WithStyles(List)>
</div>
`;

exports[`PrSheetEmployee Component displays the PrSheetEmployee, component: ROLE_AND_PROJECT_ENVIRONMENT  1`] = `
<div>
  <WithStyles(List)
    className="PrSheetEmployee-nestedText-2"
    component="div"
    disablePadding={true}
  >
    <WithStyles(ListItem)>
      <WithStyles(Grid)
        container={true}
        direction="column"
      >
        <WithStyles(Grid)
          item={true}
          lg={12}
          md={12}
          sm={12}
          xl={12}
          xs={12}
        >
          <WithStyles(Typography)
            component="p"
          >
            Rolle und Projektumfeld
          </WithStyles(Typography)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          lg={12}
          md={12}
          sm={12}
          xl={12}
          xs={12}
        >
          <WithStyles(Typography)
            className="PrSheetEmployee-comment-3"
            id="ROLE_AND_PROJECT_ENVIRONMENT_Description"
            variant="body1"
          >
            Noch kein Eintrag
          </WithStyles(Typography)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(ListItem)>
  </WithStyles(List)>
</div>
`;
